          from regular files into the main loop

2012-08-01  Rob Bradford

	* Support setting fullscreen on Ecore_Evas's under the Wayland engine
	before they are visible. The fullscreening will then be applied when
	they become visible.

2012-08-01  Rob Bradford

	* Use libxkbcommon function to map keysym to unicode characters in the
	Wayland backend. Removing the need to have our own function to do this
	and increasing the range of supported keysms. Fixes #1105.

2012-08-03  Rob Bradford

	* In the Wayland backend handle the case that events can be received
	for surfaces that have been since destroyed - the client side
	marshaller changes the pointer to NULL to when the object is destroyed
	on the client side. Fixes #1258.

2012-08-09  Cedric Bail

	* Correctly shutdown Ecore_Thread.
	* Add a way to reset Ecore_Thread internal pipe after a fork via ecore_fork_reset.

2012-08-13  Carsten Haitzler (The Rasterman)

        * Fix ecore fork reset function to allow for callbacks to be
          attached so ecore-evas can reset evas async fd on fork.

2012-08-13  Vincent Torri

        * Fix segmentation fault when fd_set pointers are NULL on Windows

2012-08-18  Carsten Haitzler (The Rasterman)

        * Add xkb change events patch from trac.

2012-08-27  Carsten Haitzler (The Rasterman)

        * Add ecore_x custom blanker screensaver enable/disable - cant
          do e17 properly without so add in even in freeze.

2012-08-27  Vincent Torri

        * Fix segmentation fault in ecore_thread on Windows as PHS
	  was returning a wrong value.

2012-08-29  Cedric Bail

	* Always call evas_render_update_free to prevent leak in Ecore_Evas X backend.

2012-08-29  Mike Blumenkrantz

        * Fix leak in ecore_ipc servers

2012-08-29  Christopher Michael

        * Add Copy-N-Paste support for Ecore_Wayland.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-31  Cedric Bail

	* Add Ecore_Con_Eet API to help using Eet_Data with Ecore_Con